tests/paczka1/fuzzy1/44251947.err
Error in line 1: XSPeVCU S620 98,3
Error in line 3: zJ012v80rL S620 20,6
Error in line 5: XSPeVCU A728 97,8
Error in line 10: XSPeVCU S487 -1,5
Error in line 8: XSPeVCU S487 45,0
Error in line 18: zJ012v80rL A728 199,8
Error in line 21: XSPeVCU S620 58,3
Error in line 27: XSPeVCU S487 87,2
Error in line 26: A728 S487 76,3
